--- a/MyNote/src/main/resources/application.properties
+++ b/MyNote/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=MyNote
+# Spring Boot MySQL connection settings
+spring.datasource.url=jdbc:mysql://localhost:3306/mynote?useSSL=false&serverTimezone=Asia/Taipei&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# MyBatis settings
+mybatis.type-aliases-package=com.mynote.MyNote.model
+mybatis.mapper-locations=classpath:mapper/*.xml
+
+# Log
+logging.level.org.mybatis=DEBUG
+logging.level.com.mynote.MyNote=DEBUG
