--- a/MyNote/src/main/resources/application.properties
+++ b/MyNote/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # MyBatis settings
-mybatis.type-aliases-package=com.mynote.MyNote.model
+mybatis.type-aliases-package=com.mynote.model
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 # Log
